--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-browserify-official": "^0.1.3",
-    "laravel-elixir-vue": "^0.1.4",
+    "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.14.0",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
     "vueify": "^8.7.0"
+  },
+
+  "babel": {
+    "presets": [ "es2015" ],
+    "plugins": [ "transform-vue-jsx" ]
   }
 }
