--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "erusev/parsedown": "^1.6",
         "qiniu/php-sdk": "^7.0",
         "laravel/socialite": "^2.0",
-        "mews/purifier": "^2.0"
+        "mews/purifier": "^2.0",
+        "cartalyst/stripe-laravel": "5.0.*",
+        "cartalyst/stripe": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
